trustfall_core/test_data/tests/valid_queries/filter_op_less_or_equal.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(min: 8, max: 9) {
        value @output @filter(op: "<=", value: ["$num"])
    }
}"#,
    arguments: {
        "num": Int64(8)
    },
)
